Changed the height in description.extended to auto making it dynamically fit in text given that JSON projects won't have a fixed word length/height. Added white-space:pre-wrap to the proejct.css file to add new lines in descriptions of projects. Started adding more to the descriptions of projects in JSON file.

--- a/styles/project.css
+++ b/styles/project.css
@@ -182,7 +182,7 @@ body {
     border-radius: 10px;
 }
 
-tooltip {
+#tooltip {
     position: absolute;
     padding: 4px 8px;
     background: rgba(0, 0, 0, 0.75);
@@ -217,7 +217,7 @@ tooltip {
     padding: 40px 80px;
     border-style: solid;
     border-color: #ffffff;
-    width: 75vw;
+    width: 80vw;
     margin: 0 auto;
     background-color: #ffffff;
     color: black;
@@ -231,8 +231,8 @@ tooltip {
 }
 
 #description.expanded {
-    height: 85vh;
-    width: 75vw;
+    height: auto;
+    align-items: flex-start;
 }
 
 .skillsandimage {
@@ -240,7 +240,7 @@ tooltip {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    gap: 300px;
+    gap: 400px;
     width: 100%;
 }
 
@@ -249,6 +249,7 @@ tooltip {
     width: 100%;
     align-self: stretch;
     padding: 0 10px;
+    white-space: pre-wrap;
 }
 
 .imageandlinks {
